k8-manifests/gcloud-ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n5-main-network-ingress
  namespace: hashed-network
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - n5.main.hashed.systems
    secretName: n5-main-hashed-systems
  rules:
  - host: n5.main.hashed.systems
    http:
      paths:
      - pathType: Prefix
        path: /p2p/
        backend:
          service:
            name: n5-main-network-service
            port:
              number: 30334
      - pathType: Prefix
        path: /ws/
        backend:
          service:
            name: n5-main-network-service
            port:
              number: 9945
      - pathType: Prefix
        path: /rpc/
        backend:
          service:
            name: n5-main-network-service
            port:
              number: 9934
